Introduced a fixe for Dynamicly creating object upon a DOI in a HLA simulation